fixed slider button overlap on nav menu in mobile layout

--- a/public_html/assets/css/custom.css
+++ b/public_html/assets/css/custom.css
@@ -57,7 +57,7 @@ div.mc-image {
 }
 
 div.maximage-controls {
-    z-index: 999;
+    z-index: 1;
 }
 
 #slider-container {
